# specs/openapi/PxOperations.Api.json
@@ -1849,6 +1849,13 @@
                 "type": "string"
               }
             }
+          },
+          {
+            "name": "includeDismissed",
+            "in": "query",
+            "schema": {
+              "type": "boolean"
+            }
           }
         ],
         "responses": {
@@ -2012,6 +2019,13 @@
               "items": {
                 "type": "string"
               }
+            }
+          },
+          {
+            "name": "includeDismissed",
+            "in": "query",
+            "schema": {
+              "type": "boolean"
             }
           }
         ],
